--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,7 @@
                 <div class="control-item">
                     <span class="spacer"></span>
                     <div class="strict"></div>
-                    <span class="label">Start</span>
+                    <span class="label">Strict</span>
                 </div>
             </div>
             <div class="switch-container">
@@ -247,16 +247,16 @@
     <audio id="audio4" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
     <script>
 
-        function button(el, audio) {
+        function button(id, el, audio) {
+            this.id = id;
             this.element = document.querySelector(el);
             this.audio =  document.querySelector(audio);
-            this.element.addEventListener('click', this.play.bind(this));
+            this.element.addEventListener('click', this.onClick.bind(this));
         }
         button.prototype = {
             constructor: button,
             play: function () {
-                let that = this;
-                console.log(this);
+                let that = this
                 this.element.classList.toggle('lit');
                 this.audio.currentTime = 0;
                 this.audio.play();
@@ -264,13 +264,37 @@
                 setTimeout(function () {
                     that.element.classList.toggle('lit');
                 }, 300);
-            }
+            },
+            onClick: function () {
+                let that = this
+                this.element.classList.toggle('lit');
+                this.audio.currentTime = 0;
+                this.audio.play();
+                playerInput(this.id);
+
+                setTimeout(function () {
+                    that.element.classList.toggle('lit');
+                }, 300);
+            },
+        };
+        const states = {
+            GAME_TURN: 0,
+            PLAYER_TURN: 1
+        };
+        let turn = 1;
+        let sequence = [0, 1, 2, 3, 2, 1, 0];
+        let inputs = [];
+        let currentState  = {
+            name: states.GAME_TURN,
+            isRunning: false
         };
 
-        const btn1 = new button('.btn.one', '#audio1');
-        const btn2 = new button('.btn.two', '#audio2');
-        const btn3 = new button('.btn.three', '#audio3');
-        const btn4 = new button('.btn.four', '#audio4');
+
+        const btns = [];
+        btns[0] = new button(0,'.btn.one', '#audio1');
+        btns[1] = new button(1,'.btn.two', '#audio2');
+        btns[2] = new button(2,'.btn.three', '#audio3');
+        btns[3] = new button(3,'.btn.four', '#audio4');
 
         let power = false;
         const powerEl = document.querySelector('.switch');
@@ -290,9 +314,66 @@
 
         const startEl = document.querySelector('.start');
         function onStartClick(e) {
-            
+            console.log("starting");
+
+            let mainLoop = setInterval(function () {
+                if(power){
+                    valueEl.innerHTML = turn;
+                    if(currentState.isRunning){
+                        return 0;
+                    }
+                    switch (currentState.name){
+                        case states.GAME_TURN: gameTurn(); break;
+                        case states.PLAYER_TURN:  playerTurn(); break;
+                    }
+                }else{
+                    window.clearInterval(mainLoop);
+                }
+            }, 50);
+
+
+            function gameTurn() {
+                turn++;
+                currentState.isRunning = true;
+                let x = 0;
+                let intervalID = setInterval(function () {
+                    btns[sequence[x]].play();
+                    if (++x === sequence.length) {
+                        window.clearInterval(intervalID);
+                        currentState  = {
+                            name: states.PLAYER_TURN,
+                            isRunning: false
+                        };
+                    }
+                }, 1000);
+
+            }
+
+            function playerTurn() {
+                currentState.isRunning = true;
+                setTimeout(function () {
+                   if(currentState.name === states.PLAYER_TURN){
+                       alert('YOU LOSE!');
+                   }
+                }, sequence.length * 1000)
+            }
         }
         startEl.addEventListener('click', onStartClick);
+
+
+        function playerInput(id) {
+                inputs.push(id);
+
+                console.log(inputs.join());
+                console.log(sequence.join().substring(0,inputs.length*2));
+                if(inputs.join() === sequence.join().substr(0,inputs.length*2)){
+                    console.log("ok");
+                }
+
+//                if((playerInputs.length === sequence.length) && (playerInputs.join()===sequence.join())){
+//                    console('fuck');
+//                }
+        }
 
 
 
